Terminando de configurar workspace y creando proyecto inicial

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
     "dockerFile": "../Dockerfile",
     "remoteUser": "endersonpro",
     "mounts": [
-        // "source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
+        "source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
     ],
     "settings": {
         "terminal.integrated.shell.linux": null
@@ -13,4 +13,4 @@
     "extensions": ["dart-code.flutter"],
     "workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/endersonpro/workspace,type=bind,consistency=delegated",
     "workspaceFolder": "/home/endersonpro/workspace"
-   }
+}
