--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-        working-directory: ./workspace/filmsapp
+      - working-directory: ./workspace/filmsapp
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
@@ -35,7 +35,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-        working-directory: ./workspace/filmsapp
+      - working-directory: ./workspace/filmsapp
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build appbundle
