--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,9 @@ jobs:
     name: Construyendo Flutter App (iOS)
     needs: [flutter_test]
     runs-on: macos-latest
+    defaults:
+      run:
+        working-directory: ./workspace/filmsapp
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -18,7 +21,6 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-      - working-directory: ./workspace/filmsapp
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
@@ -27,6 +29,9 @@ jobs:
     name: Construyendo Flutter App (Android)
     needs: [flutter_test]
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./workspace/filmsapp
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -35,7 +40,6 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           channel: "stable"
-      - working-directory: ./workspace/filmsapp
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build appbundle
